# Pytest-Mastering

./: README.md  pyproject.toml
src/pytest_mastering/source/: my_functions.py  school.py  service.py  shapes.py
tests/source/: conftest.py  test_circle.py  test_my_functions.py  test_rectangle.py  test_school.py  test_service.py  test_square.py
