[build-system]
requires = ["setuptools>=42"]


[project]
name = "pytest_mastering"
version = "0.1.0"
description = "Matsering the fundamentals of pytest (fixture, conftest etc..)"
requires-python = ">= 3.11"

dependencies = [
"pytest",
]
    
[project.optional-dependencies]
dev = [
    "pytest", 
    "pip-tools"
]


